--- a/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -84,6 +84,11 @@
                                         </a>
                                     </li>
                                     <li>
+                                        <a href="/Admin/FoodIngredients">
+                                            <span class="sub-item">Food Ingredient</span>
+                                        </a>
+                                    </li>
+                                    <li>
                                         <a href="/Admin/Ingredients">
                                             <span class="sub-item">Ingredient</span>
                                         </a>
@@ -99,7 +104,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="/Admin/Cateroies">
+                                        <a href="/Admin/Categories">
                                             <span class="sub-item">Category</span>
                                         </a>
                                     </li>
@@ -123,11 +128,7 @@
                                             <span class="sub-item">Poster</span>
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="/Admin/Providers">
-                                            <span class="sub-item">Provider</span>
-                                        </a>
-                                    </li>
+
                                 </ul>
                             </div>
                         </li>
